--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>The Business Model Canvas <span class="subtitle">Netflix</span></h1>
         <div class="info-header">
-            <span>Designed for: Economia das Empresas</span>
+            <span>Designed for: Economia de Empresas</span>
             <span>Designed by: Gabriel Pierre Carvalho Coelho</span>
             <span>Date: 13/06/2025</span>
             <span>Version: 1.0</span>
